--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
         <label for="keybind">Keybind:</label>
         <input type="text" id="keybind" class="form-input" placeholder="Ctrl+Q">
         <button id="setKeybind" class="btn btn-primary">Set Keybind</button>
+        <div id="keypressDisplay"></div>
       </div>
     </div>
     <script src="settings.js"></script>
