--- a/settings.html
+++ b/settings.html
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="dist/tailwind.css" />
 
 <body>
-    <div class="p-4">
-      <h1 class="text-2xl mb-4">Settings</h1>
+    <div class="p-4 bg-gray-800 h-72 rounded-box ">
+      <h1 class="text-2xl mb-4 justify-center text-white">Settings</h1>
       <div>
-        <label for="keybind">Keybind:</label>
-        <input type="text" id="keybind" class="form-input" placeholder="Ctrl+Q">
-        <button id="setKeybind" class="btn btn-primary">Set Keybind</button>
+        <label class ="text-white" for="keybind">Keybind:</label>
+        <input type="text" id="keybind" class="form-input text-white" placeholder="Ctrl+Q">
+        <button id="setKeybind" class="btn btn-primary text-white">Set Keybind</button>
         <div id="keypressDisplay"></div>
       </div>
     </div>
