--- a/settings.html
+++ b/settings.html
@@ -5,10 +5,10 @@
       <h1 class="text-2xl mb-4 justify-center text-white">Settings</h1>
       <div>
         <label class ="text-white" for="keybind">Keybind:</label>
-        <input type="text" id="keybind" class="form-input text-white" placeholder="Ctrl+Q">
+        <input type="text" id="keybind" class="form-input text-black" placeholder="Click Here">
         <button id="setKeybind" class="btn btn-primary text-white">Set Keybind</button>
-        <div id="keypressDisplay"></div>
+        <div id="keypressDisplay" class="color-white"></div>
       </div>
     </div>
-    <script src="settings.js"></script>
+  
 </body>
