fixed the scrollbar

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <option>Japanese</option>
         <option>Spanish</option>
         <option>French</option>
+        <option>Korean</option>
       </select>
       </li>
 
